RESOLVED FIXED85841
IndexedDB: call abort handler when there are problems committing
https://bugs.webkit.org/show_bug.cgi?id=85841
Summary IndexedDB: call abort handler when there are problems committing
Alec Flett
Reported 2012-05-07 16:07:28 PDT
IndexedDB: call abort handler when there are problems committing
Attachments
Patch (4.39 KB, patch)
2012-05-08 12:07 PDT, Alec Flett
no flags
Patch (4.60 KB, patch)
2012-05-09 13:45 PDT, Alec Flett
no flags
Alec Flett
Comment 1 2012-05-08 12:07:32 PDT
David Grogan
Comment 2 2012-05-09 13:41:33 PDT
LGTM
David Grogan
Comment 3 2012-05-09 13:44:02 PDT
Comment on attachment 140759 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=140759&action=review > Source/WebCore/ChangeLog:8 > + No new tests. (OOPS!) You'll have to remove the OOPS and re-upload. The reasoning from my similar patch applies here (https://bugs.webkit.org/attachment.cgi?id=140156&action=review) No new tests. We think the only way this will happen is if the leveldb store gets corrupted, either due to IO problems or coding error. We're working on a pyauto test that corrups the db in the background but can't do that from DRT.
Alec Flett
Comment 4 2012-05-09 13:45:00 PDT
Alec Flett
Comment 5 2012-05-09 13:46:23 PDT
ojan - r? No tests here, as explained in the changelog - this is going to help us reproduce a problem we're seeing in the wild, but this is quite safe otherwise. (and all our existing tests already basically call commit())
Alec Flett
Comment 6 2012-05-09 14:50:27 PDT
Comment on attachment 141009 [details] Patch oops, forgot the cq? - jsbell@
Alec Flett
Comment 7 2012-05-09 14:50:46 PDT
er rather, dgrogan@ - cq?
WebKit Review Bot
Comment 8 2012-05-09 15:08:26 PDT
Comment on attachment 141009 [details] Patch Clearing flags on attachment: 141009 Committed r116562: <http://trac.webkit.org/changeset/116562>
WebKit Review Bot
Comment 9 2012-05-09 15:08:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.